Introduce specific getUserOfCourseForSubmission and Result methods